--- a/styles/index.scss
+++ b/styles/index.scss
@@ -30,3 +30,8 @@ $selector-wrapper: '.strib-styles.ssa.ssb.ssc';
   @import 'shared/_project';
 }
 
+.topper a {
+  color:#333333 !important;
+  text-decoration:none !important;
+}
+
