--- a/templates/_index-content.svelte.html
+++ b/templates/_index-content.svelte.html
@@ -1,7 +1,7 @@
 <div class="strib-styles ssa ssb ssc">
   <section class="container-lg elex-header">
-    <h5 class="font-popular-light"><span class="font-popular-medium"></span></h5>
-    <h1>Even as Minnesota gradually reopens, daily life remains altered</h1>
+    <h5 class="font-popular-light topper"><span class="font-popular-medium"><a href="https://www.startribune.com/local/coronavirus/">Coronavirus</a></span></h5>
+    <h1>Minnesota is reopening, but falls short of normalcy</h1>
   <div class="byline">
     <address>By
       <a rel="author" href="http://www.startribune.com/jeff-hargarten/274254381/">Jeff Hargarten</a>
@@ -9,64 +9,69 @@
     <span class="spacer"></span>
     Star Tribune
     <span class="spacer-alt"></span>
-    <time pubdate datetime="2019-11-11T16:00:00">June 22, 2020</time>
+    <time pubdate datetime="2019-11-11T16:00:00">June 24, 2020</time>
   </div>
   <p></p>
   <!-- share -->
 </section>
-
       <section class="container-lg leadin">
-        <p>After more than a month of shelter-in-place and two weeks gradual rollbacks of COVID-19 lockdowns, Minnesotans are socially distancing less and more engaged with summertime activities.</p>
+        <p>As COVID-19 lockdowns gradually roll back and the aftermath of civil unrest somewhat settles down, Minnesotans are seemingly socially distancing less and are more engaged with summertime activities.</p>
 
-        <p>Yet with many summer events canceled for the year and several restrictions still in place, normalcy can still seem far off.</p>
+        <p>Yet with many summer events canceled for the year and several restrictions still in place, normalcy seems far off, and may not fully return anytime soon.</p>
 
-        <p>Data reveal some ways Minnesotans have started returning to normal routines.</p>
+        <p>Data from various sources reveal some ways Minnesotans have started returning to normal routines – and other ways that life remains altered.</p>
+
+        <p>As new data is obtained, this page may be updated.</p>
       </section>
 
       <div class="rule"></div>
       <section class="body">
-        <h2 class="chartTitle">Some things are normalizing</h2>
+        <h2 class="chartTitle">Vehicular traffic has roared back</h2>
 
-        <p>Minnesotans have been slacking off social distancing for a while, long before lockdowns started easing, so reclaiming normal traffic volume and daily movements didn't take long.</p>
+        <p>After weeks of climbing back toward normal levels, Minnesota's roadways are closer to typical activity levels.</p>
 
-        <p>After weeks of creeping back toward normal levels, Minnesota's roadways are closer to normal daily activity levels.</p>
+        <p>Despite traffic density falling significantly since shelter-in-place orders took effect statewide, Minnesota Department of Transportation daily tracking shows the volume of vehicles now looks more like last year at this time.</p>
       </section>
 
       <div class="slide space">
-        <iframe title="Traffic is up" aria-label="Interactive line chart" id="datawrapper-chart-hKLU9" src="//datawrapper.dwcdn.net/hKLU9/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe>
+        <iframe title="Traffic is up" aria-label="Interactive line chart" id="datawrapper-chart-2mMUF" src="//datawrapper.dwcdn.net/2mMUF/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe>
       </div>
-
-      <section class="body">
-        <p>On the whole, Minnesotans are back to typical isolation levels as well, according to Unacast data that measures social distancing. Minnesota's grade had been sliding gradually from a B+ when shelter-in-place started in March, reached a D- just before it ended, and now, like much of the United States, sits at an F.</p>
-      </section>
-
-      <!-- <div class="slide space">
-        <iframe title="Distancing is down" aria-label="Interactive line chart" id="datawrapper-chart-A8Evn" src="//datawrapper.dwcdn.net/QE2gu/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe>
-      </div> -->
-
-      <section class="body">
-        <p>On the whole, Minnesotans are back to typical isolation levels as well, according to Unacast data that measures social distancing. Minnesota's grade had been sliding gradually from a B+ when shelter-in-place started in March, reached a D- just before it ended, and now, like much of the United States, sits at an F.</p>
-      </section>
-
 
 
       <div class="rule"></div>
       <section class="body">
-        <h2 class="chartTitle">Some things remain altered</h2>
+        <h2 class="chartTitle">Buses and trains remain emptier</h2>
 
-        <p>Even though transit routes have started opening back up, some restrictings and service reductions remain across the Twin Cities metro area. That, combined with continued work-from-home arrangements, seem to still be depressing ridership on buses and light rail.</p>
+        <p>Even though transit routes have started opening back up, safety restrictions and service reductions remain across the Twin Cities metro area. That, combined with continued work-from-home arrangements, seem to still be depressing ridership on buses and light rail.</p>
+
+        <p>Ridership ceased completely as Metro Transit shut down over the period of unrest and mandatory curfews enforced immediately after the death of George Floyd, but have bounced back.</p>
       </section>
 
       <div class="slide space">
         <iframe title="Transit is down" aria-label="Interactive line chart" id="datawrapper-chart-A8Evn" src="//datawrapper.dwcdn.net/A8Evn/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe>
       </div>
 
+      <div class="rule"></div>
       <section class="body">
-        <p>Bars and restaurants will still be missing crowds for a long while too, since even with the reopening of outdoor roof and patio dining, restrictions on capacity and required reservations seem have kept patrons eating at home.</p>
+        <h2 class="chartTitle">Restaurant diners are returning, slowly</h2>
+        <p>Bars and restaurants may be missing typical crowds for a while, even with the reopening of indoor and outdoor dining. Concerns over safety, restrictions on restaurant crowd capacity, diner spacing and required reservations may be keeping many would-be patrons away.</p>
       </section>
 
       <div class="slide space">
         <iframe title="Dining is down" aria-label="Interactive line chart" id="datawrapper-chart-1IlCk" src="//datawrapper.dwcdn.net/1IlCk/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe>
+      </div>
+
+
+      <div class="rule"></div>
+      <section class="body">
+        <h2 class="chartTitle">Social distancing breaks down</h2>
+        <p>On the whole, Minnesotans are back to typical isolation levels <a href="https://www.startribune.com/how-minnesotans-are-lightening-up-on-social-distancing/568966921/">after slacking off for a while</a>. Unacast data measuring social distancing <a href="https://www.unacast.com/covid19/social-distancing-scoreboard?view=state&fips=27" target="new_">shows Minnesota's grade</a> had been sliding gradually from a B when shelter-in-place started in March and by May was scoring an F, like much of the United States.</p>
+
+        <p>And Google data shows where they're going: mostly to parks and other outdooor recreation areas to take advantage of Minnesota's limited summer weather.</p>
+      </section>
+
+      <div class="slide space">
+        <iframe title="Minnesotans are more active, but in different ways" aria-label="Interactive line chart" id="datawrapper-chart-37PQQ" src="https://datawrapper.dwcdn.net/37PQQ/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="594"></iframe>    
       </div>
 
 
@@ -76,7 +81,7 @@
 
         <div class="article-author-hcard">
                 <p></p><p><span style="font-size: 10pt; font-family: Arial;"><strong>Jeff Hargarten </strong>is a data journalist for the Star Tribune focusing on data-driven reporting and visualization. He has covered elections, technology, criminal justice, demographics and public health.</span></p><p></p>
-                <p><a class="article-author-hcard__email" target="_blank" href="mailto:Jeff.Hargarten@startribune.com?subject=Even as Minnesota gradually reopens, daily life remains altered" data-linkname="Jeff.Hargarten@startribune.com" data-linktype="email" data-modulename="Article" data-moduletype="zone1-content" data-position="0-1-author">Jeff.Hargarten@startribune.com</a>
+                <p><a class="article-author-hcard__email" target="_blank" href="mailto:Jeff.Hargarten@startribune.com?subject=Minnesota is reopening, but falls short of normalcy" data-linkname="Jeff.Hargarten@startribune.com" data-linktype="email" data-modulename="Article" data-moduletype="zone1-content" data-position="0-1-author">Jeff.Hargarten@startribune.com</a>
                 <a class="article-author-hcard__phone" href="tel:612-673-4642" data-linkname="612-673-4642" data-linktype="phone" data-modulename="Article" data-moduletype="zone1-content" data-position="0-1-author">612-673-4642</a>
                 <a class="article-author-hcard__twitter" href="http://twitter.com/JeffHargarten" target="_blank" data-linkname="JeffHargarten" data-linktype="twitter" data-modulename="Article" data-moduletype="zone1-content" data-position="0-1-author">JeffHargarten</a></p>
         </div>
