--- a/templates/_index-content.svelte.html
+++ b/templates/_index-content.svelte.html
@@ -21,7 +21,7 @@
 
         <p>Data from various sources reveal some ways Minnesotans have started returning to normal routines – and other ways that life remains altered.</p>
 
-        <p>As new data is obtained, this page may be updated.</p>
+        <p>As new data are obtained, this page may be updated.</p>
       </section>
 
       <div class="rule"></div>
@@ -35,6 +35,19 @@
 
       <div class="slide space">
         <iframe title="Traffic is up" aria-label="Interactive line chart" id="datawrapper-chart-2mMUF" src="//datawrapper.dwcdn.net/2mMUF/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe>
+      </div>
+
+
+      <div class="rule"></div>
+      <section class="body">
+        <h2 class="chartTitle">Social distancing breaks down</h2>
+        <p>On the whole, Minnesotans are back to typical isolation levels <a href="https://www.startribune.com/how-minnesotans-are-lightening-up-on-social-distancing/568966921/">after slacking off for a while</a>. Unacast data measuring social distancing <a href="https://www.unacast.com/covid19/social-distancing-scoreboard?view=state&fips=27" target="new_">shows Minnesota's grade</a> had been sliding gradually from a B when shelter-in-place started in March and by May was scoring an F, like much of the United States.</p>
+
+        <p>And Google data shows where they're going: mostly to parks and other recreation areas to take advantage of Minnesota's limited summer weather.</p>
+      </section>
+
+      <div class="slide space">
+        <iframe title="Minnesotans are more active, but in different ways" aria-label="Interactive line chart" id="datawrapper-chart-37PQQ" src="https://datawrapper.dwcdn.net/37PQQ/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="594"></iframe>    
       </div>
 
 
@@ -59,19 +72,6 @@
 
       <div class="slide space">
         <iframe title="Dining is down" aria-label="Interactive line chart" id="datawrapper-chart-1IlCk" src="//datawrapper.dwcdn.net/1IlCk/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe>
-      </div>
-
-
-      <div class="rule"></div>
-      <section class="body">
-        <h2 class="chartTitle">Social distancing breaks down</h2>
-        <p>On the whole, Minnesotans are back to typical isolation levels <a href="https://www.startribune.com/how-minnesotans-are-lightening-up-on-social-distancing/568966921/">after slacking off for a while</a>. Unacast data measuring social distancing <a href="https://www.unacast.com/covid19/social-distancing-scoreboard?view=state&fips=27" target="new_">shows Minnesota's grade</a> had been sliding gradually from a B when shelter-in-place started in March and by May was scoring an F, like much of the United States.</p>
-
-        <p>And Google data shows where they're going: mostly to parks and other outdooor recreation areas to take advantage of Minnesota's limited summer weather.</p>
-      </section>
-
-      <div class="slide space">
-        <iframe title="Minnesotans are more active, but in different ways" aria-label="Interactive line chart" id="datawrapper-chart-37PQQ" src="https://datawrapper.dwcdn.net/37PQQ/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="594"></iframe>    
       </div>
 
 
