--- a/templates/_index-content.svelte.html
+++ b/templates/_index-content.svelte.html
@@ -9,17 +9,17 @@
     <span class="spacer"></span>
     Star Tribune
     <span class="spacer-alt"></span>
-    <time pubdate datetime="2019-11-11T16:00:00">June 24, 2020</time>
+    <time pubdate datetime="2019-11-11T16:00:00">June 26, 2020</time>
   </div>
   <p></p>
   <!-- share -->
 </section>
       <section class="container-lg leadin">
-        <p>As COVID-19 lockdowns gradually roll back and the aftermath of civil unrest somewhat settles down, Minnesotans are seemingly socially distancing less and are more engaged with summertime activities.</p>
+        <p>As COVID-19 lockdowns gradually ease and the aftermath of civil unrest settles, Minnesotans are socially distancing less and are more engaged with summertime activities.</p>
 
-        <p>Yet with many summer events canceled for the year and several restrictions still in place, normalcy seems far off, and may not fully return anytime soon.</p>
+        <p>Yet with many summer events canceled, several restrictions still in place and concerns over possible spikes in coronavirus cases mount, normalcy seems far off, and may not fully return anytime soon.</p>
 
-        <p>Data from various sources reveal some ways Minnesotans have started returning to normal routines – and other ways that life remains altered.</p>
+        <p>Data from various sources reveal some ways Minnesotans have started returning to normal routines – and other ways that life remains altered. And if a second viral wave hits later this year, some of these metrics may retreat again.</p>
 
         <p>As new data are obtained, this page may be updated.</p>
       </section>
@@ -28,9 +28,9 @@
       <section class="body">
         <h2 class="chartTitle">Vehicular traffic has roared back</h2>
 
-        <p>After weeks of climbing back toward normal levels, Minnesota's roadways are closer to typical activity levels.</p>
-
         <p>Despite traffic density falling significantly since shelter-in-place orders took effect statewide, Minnesota Department of Transportation daily tracking shows the volume of vehicles now looks more like last year at this time.</p>
+
+        <p>Weekends have been down more than usual since coronavirus struck, partially due to big events being canceled.</p>
       </section>
 
       <div class="slide space">
@@ -41,23 +41,65 @@
       <div class="rule"></div>
       <section class="body">
         <h2 class="chartTitle">Social distancing breaks down</h2>
-        <p>On the whole, Minnesotans are back to typical isolation levels <a href="https://www.startribune.com/how-minnesotans-are-lightening-up-on-social-distancing/568966921/">after slacking off for a while</a>. Unacast data measuring social distancing <a href="https://www.unacast.com/covid19/social-distancing-scoreboard?view=state&fips=27" target="new_">shows Minnesota's grade</a> had been sliding gradually from a B when shelter-in-place started in March and by May was scoring an F, like much of the United States.</p>
+        <p>On the whole, Minnesotans are back to typical isolation levels <a href="https://www.startribune.com/how-minnesotans-are-lightening-up-on-social-distancing/568966921/">after slacking off for a while</a>. Unacast data measuring social distancing <a href="https://www.unacast.com/covid19/social-distancing-scoreboard?view=state&fips=27" target="new_">shows Minnesota's grade</a> had been sliding gradually from a B when shelter-in-place started in March and by June was scoring an F, like much of the United States.</p>
+      </section>
 
-        <p>And Google data shows where they're going: mostly to parks and other recreation areas to take advantage of Minnesota's limited summer weather.</p>
+      <div class="slide space">
+        <div class="chartTitle">Unacast social distancing grades for Minnesota</div>
+        <ul class="timeline" id="timeline">
+          <li class="li gradeb complete">
+            <div class="timestamp">
+              <span class="date">3/28/2020<span>
+            </div>
+            <div class="status">
+              <h4 class="gradeb">B</h4>
+            </div>
+          </li>
+          <li class="li gradec complete">
+            <div class="timestamp">
+              <span class="date">4/26/2020<span>
+            </div>
+            <div class="status">
+              <h4 class="gradec">C</h4>
+            </div>
+          </li>
+          <li class="li graded complete">
+            <div class="timestamp">
+              <span class="date">5/31/2020<span>
+            </div>
+            <div class="status">
+              <h4 class="graded">D</h4>
+            </div>
+          </li>
+          <li class="li graded complete">
+            <div class="timestamp">
+              <span class="date">6/20/2020<span>
+            </div>
+            <div class="status">
+              <h4 class="gradef">F</h4>
+            </div>
+          </li>
+         </ul>     
+         <div class="byline">
+          <div>Chart: Jeff Hargarten, Star Tribune • Source: Unacast</div>
+      </div>
+      </div>
+
+      <section class="body">
+        <p>And Google data shows where Minnesotans are going: mostly to parks and other recreation areas to take advantage of Minnesota's summer weather.</p>
       </section>
 
       <div class="slide space">
         <iframe title="Minnesotans are more active, but in different ways" aria-label="Interactive line chart" id="datawrapper-chart-37PQQ" src="https://datawrapper.dwcdn.net/37PQQ/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="594"></iframe>    
       </div>
 
-
       <div class="rule"></div>
       <section class="body">
         <h2 class="chartTitle">Buses and trains remain emptier</h2>
 
-        <p>Even though transit routes have started opening back up, safety restrictions and service reductions remain across the Twin Cities metro area. That, combined with continued work-from-home arrangements, seem to still be depressing ridership on buses and light rail.</p>
+        <p>Even though transit routes have started opening back up, safety restrictions and continued service reductions remain across the Twin Cities metro area. That, combined with continued work-from-home arrangements, are still depressing ridership on buses and light rail.</p>
 
-        <p>Ridership ceased completely as Metro Transit shut down over the period of unrest and mandatory curfews enforced immediately after the death of George Floyd, but have bounced back.</p>
+        <p>Ridership ceased completely as Metro Transit shut down over the period of unrest and mandatory curfews enforced immediately after the death of George Floyd, but has since bounced back to prior levels.</p>
       </section>
 
       <div class="slide space">
@@ -66,8 +108,10 @@
 
       <div class="rule"></div>
       <section class="body">
-        <h2 class="chartTitle">Restaurant diners are returning, slowly</h2>
-        <p>Bars and restaurants may be missing typical crowds for a while, even with the reopening of indoor and outdoor dining. Concerns over safety, restrictions on restaurant crowd capacity, diner spacing and required reservations may be keeping many would-be patrons away.</p>
+        <h2 class="chartTitle">Restaurant diners are returning</h2>
+        <p>Bars and restaurants may be missing typical crowds for a while, even with the reopening of indoor and outdoor dining.</p>
+
+        <p>But even with restrictions placed on restaurants in terms of distancing and reservations, patrons are piling back into sit-down eating establishments after months of most places being either closed or confined to takeout and delivery.</p>
       </section>
 
       <div class="slide space">
