--- a/styles/index.scss
+++ b/styles/index.scss
@@ -35,3 +35,126 @@ $selector-wrapper: '.strib-styles.ssa.ssb.ssc';
   text-decoration:none !important;
 }
 
+#timeline {
+  width: 100%;
+}
+
+.timeline {
+  list-style-type: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.timestamp {
+  margin-bottom: 20px;
+  padding: 0px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-weight: 100;
+  font-size:12px;
+}
+
+.gradeb {
+  color:#8cbf82;
+}
+
+.gradec {
+  color:#D9D3EB;
+}
+
+.graded {
+  color:#7D739C;
+}
+
+.gradef {
+  color:#4A4061;
+}
+
+.gradeb:before  {
+  background-color:#8cbf82 !important;
+}
+
+.gradec:before  {
+  background-color:#D9D3EB !important;
+}
+
+.graded:before  {
+  background-color:#7D739C !important;
+}
+
+.gradef:before  {
+  background-color:#4A4061 !important;
+}
+
+.status {
+  padding: 0px 20px;
+  display: flex;
+  justify-content: center;
+  border-top: 2px solid #D6DCE0;
+  position: relative;
+}
+
+#timeline h4 {
+    font-weight: 600;
+    margin-top:11px !important;;
+  &:before {
+    content: '';
+    width: 25px;
+    height: 25px;
+    background-color: white;
+    border-radius: 25px;
+    border: 1px solid #ddd;
+    position: absolute;
+    top: -15px;
+    left: 37%;
+  }
+
+  }
+
+.li.complete 
+  .status {
+    border-top: 2px solid #D6DCE0;
+    &:before {
+      background-color: #66DC71;
+      border: none;
+    }
+    h4 {
+      text-align:center;
+    }
+  }
+
+  .chartTitle {
+    font-family: "Benton Sans";
+    font-weight: 700;
+    font-size: 19px !important;;
+    color: #333;
+    line-height: 20px;
+    margin-bottom:25px;
+  }
+  
+
+@media (min-device-width: 320px) and (max-device-width: 500px) {
+  .timeline {
+    list-style-type: none;
+    display: block;
+  }
+  .li {
+    transition: all 200ms ease-in;
+    display: flex;
+    width: inherit;
+  }
+  .timestamp {
+    width: 100px;
+  }
+  .status {
+    &:before {
+      left: -8%;
+      top: 30%;
+      transition: all 200ms ease-in; 
+    }
+  }
+}
+
