--- a/styles/shared/_project.scss
+++ b/styles/shared/_project.scss
@@ -224,6 +224,7 @@
     
     .byline a {
         color: #888 !important;
+        text-decoration: none !important;
     }
     
     .row {
@@ -247,7 +248,7 @@
         line-height:140%;
         font-family: "Benton Sans", Helvetica, Arial, sans-serif;
         font-weight: 400;
-        font-size:0.6em;
+        font-size:11px;
         color: #888;
         padding-top:10px;
         padding-bottom:10px;
