--- a/templates/_index-content.svelte.html
+++ b/templates/_index-content.svelte.html
@@ -45,7 +45,7 @@
       </section>
 
       <div class="slide space">
-        <div class="chartTitle">Unacast social distancing grades for Minnesota</div>
+        <div class="chart-title">Unacast social distancing grades for Minnesota</div>
         <ul class="timeline" id="timeline">
           <li class="li gradeb complete">
             <div class="timestamp">
