--- a/templates/_index-content.svelte.html
+++ b/templates/_index-content.svelte.html
@@ -9,7 +9,7 @@
     <span class="spacer"></span>
     Star Tribune
     <span class="spacer-alt"></span>
-    <time pubdate datetime="2019-11-11T16:00:00">June 26, 2020</time>
+    <time pubdate datetime="2019-11-11T16:00:00">Updated June 29, 2020</time>
   </div>
   <p></p>
   <!-- share -->
