--- a/templates/_index-content.svelte.html
+++ b/templates/_index-content.svelte.html
@@ -1,7 +1,7 @@
 <div class="strib-styles ssa ssb ssc">
   <section class="container-lg elex-header">
     <h5 class="font-popular-light topper"><span class="font-popular-medium"><a href="https://www.startribune.com/local/coronavirus/">Coronavirus</a></span></h5>
-    <h1>Minnesota is reopening, but falls short of normalcy</h1>
+    <h1>Summer might be canceled, but Minnesotans are distancing less</h1>
   <div class="byline">
     <address>By
       <a rel="author" href="http://www.startribune.com/jeff-hargarten/274254381/">Jeff Hargarten</a>
@@ -9,7 +9,7 @@
     <span class="spacer"></span>
     Star Tribune
     <span class="spacer-alt"></span>
-    <time pubdate datetime="2019-11-11T16:00:00">Updated June 29, 2020</time>
+    <time pubdate datetime="2019-11-11T16:00:00">Updated July 1, 2020</time>
   </div>
   <p></p>
   <!-- share -->
@@ -17,7 +17,7 @@
       <section class="container-lg leadin">
         <p>As COVID-19 lockdowns gradually ease and the aftermath of civil unrest settles, Minnesotans are socially distancing less and are more engaged with summertime activities.</p>
 
-        <p>Yet with many summer events canceled, several restrictions still in place and concerns over possible spikes in coronavirus cases mount, normalcy seems far off, and may not fully return anytime soon.</p>
+        <p>Yet with many summer events canceled, several restrictions still in place and mounting concerns over possible spikes in coronavirus cases, normalcy seems far off, and may not fully return anytime soon.</p>
 
         <p>Data from various sources reveal some ways Minnesotans have started returning to normal routines – and other ways that life remains altered. And if a second viral wave hits later this year, some of these metrics may retreat again.</p>
 
@@ -30,7 +30,7 @@
 
         <p>Despite traffic density falling significantly since shelter-in-place orders took effect statewide, Minnesota Department of Transportation daily tracking shows the volume of vehicles now looks more like last year at this time.</p>
 
-        <p>Weekends have been down more than usual since coronavirus struck, partially due to big events being canceled.</p>
+        <p>Weekend activity has been lower than usual since coronavirus struck, partially due to big events being canceled.</p>
       </section>
 
       <div class="slide space">
@@ -41,7 +41,7 @@
       <div class="rule"></div>
       <section class="body">
         <h2 class="chartTitle">Social distancing breaks down</h2>
-        <p>On the whole, Minnesotans are back to typical isolation levels <a href="https://www.startribune.com/how-minnesotans-are-lightening-up-on-social-distancing/568966921/">after slacking off for a while</a>. Unacast data measuring social distancing <a href="https://www.unacast.com/covid19/social-distancing-scoreboard?view=state&fips=27" target="new_">shows Minnesota's grade</a> had been sliding gradually from a B when shelter-in-place started in March and by June was scoring an F, like much of the United States.</p>
+        <p>On the whole, Minnesotans are back to typical isolation levels <a href="https://www.startribune.com/how-minnesotans-are-lightening-up-on-social-distancing/568966921/">after slacking off for a while</a>. Unacast, a company tracking social distancing with cellphone data, <a href="https://www.unacast.com/covid19/social-distancing-scoreboard?view=state&fips=27" target="new_">shows Minnesota's grade</a> slid from a B in March to and F by June – where much of the United States sits now.</p>
       </section>
 
       <div class="slide space">
@@ -49,7 +49,7 @@
         <ul class="timeline" id="timeline">
           <li class="li gradeb complete">
             <div class="timestamp">
-              <span class="date">3/28/2020<span>
+              <span class="date">Mar. 28<span>
             </div>
             <div class="status">
               <h4 class="gradeb">B</h4>
@@ -57,7 +57,7 @@
           </li>
           <li class="li gradec complete">
             <div class="timestamp">
-              <span class="date">4/26/2020<span>
+              <span class="date">Apr. 25<span>
             </div>
             <div class="status">
               <h4 class="gradec">C</h4>
@@ -65,7 +65,7 @@
           </li>
           <li class="li graded complete">
             <div class="timestamp">
-              <span class="date">5/31/2020<span>
+              <span class="date">May 31<span>
             </div>
             <div class="status">
               <h4 class="graded">D</h4>
@@ -73,7 +73,7 @@
           </li>
           <li class="li graded complete">
             <div class="timestamp">
-              <span class="date">6/20/2020<span>
+              <span class="date">June 20<span>
             </div>
             <div class="status">
               <h4 class="gradef">F</h4>
@@ -95,27 +95,29 @@
 
       <div class="rule"></div>
       <section class="body">
-        <h2 class="chartTitle">Buses and trains remain emptier</h2>
-
-        <p>Even though transit routes have started opening back up, safety restrictions and continued service reductions remain across the Twin Cities metro area. That, combined with continued work-from-home arrangements, are still depressing ridership on buses and light rail.</p>
-
-        <p>Ridership ceased completely as Metro Transit shut down over the period of unrest and mandatory curfews enforced immediately after the death of George Floyd, but has since bounced back to prior levels.</p>
-      </section>
-
-      <div class="slide space">
-        <iframe title="Transit is down" aria-label="Interactive line chart" id="datawrapper-chart-A8Evn" src="//datawrapper.dwcdn.net/A8Evn/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe>
-      </div>
-
-      <div class="rule"></div>
-      <section class="body">
-        <h2 class="chartTitle">Restaurant diners are returning</h2>
+        <h2 class="chartTitle">Restaurant diners are returning, slowly</h2>
         <p>Bars and restaurants may be missing typical crowds for a while, even with the reopening of indoor and outdoor dining.</p>
 
-        <p>But even with restrictions placed on restaurants in terms of distancing and reservations, patrons are piling back into sit-down eating establishments after months of most places being either closed or confined to takeout and delivery.</p>
+        <p>But even with restrictions placed on restaurants in terms of distancing and reservations, <a href="https://www.opentable.com/state-of-industry">numbers from OpenTable</a> show patrons are piling back into sit-down eating establishments after months of most places being either closed or confined to takeout and delivery.</p>
+
+        <p>This return slowed down a bit the past week, particularly in Minneapolis compared to statewide and national trends.</p>
       </section>
 
       <div class="slide space">
         <iframe title="Dining is down" aria-label="Interactive line chart" id="datawrapper-chart-1IlCk" src="//datawrapper.dwcdn.net/1IlCk/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe>
+      </div>
+
+      <div class="rule"></div>
+      <section class="body">
+        <h2 class="chartTitle">Buses and trains remain emptier</h2>
+
+        <p>Mandatory safety precautions and service reductions continue for Metro Transit across the Twin Cities area. That, combined with continued work-from-home arrangements, have depressed ridership on buses and light rail.</p>
+
+        <p>Ridership ceased completely as Metro Transit shut down over the period of unrest and mandatory curfews enforced shortly after the death of George Floyd, but has since bounced back to prior levels.</p>
+      </section>
+
+      <div class="slide space">
+        <iframe title="Transit is down" aria-label="Interactive line chart" id="datawrapper-chart-A8Evn" src="//datawrapper.dwcdn.net/A8Evn/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe>
       </div>
 
 
