--- a/templates/_index-content.svelte.html
+++ b/templates/_index-content.svelte.html
@@ -9,7 +9,7 @@
     <span class="spacer"></span>
     Star Tribune
     <span class="spacer-alt"></span>
-    <time pubdate datetime="2019-11-11T16:00:00">Updated July 1, 2020</time>
+    <time pubdate datetime="2019-11-11T16:00:00">Updated July 2, 2020</time>
   </div>
   <p></p>
   <!-- share -->
@@ -65,7 +65,7 @@
           </li>
           <li class="li graded complete">
             <div class="timestamp">
-              <span class="date">May 31<span>
+              <span class="date">May 13<span>
             </div>
             <div class="status">
               <h4 class="graded">D</h4>
@@ -87,6 +87,8 @@
 
       <section class="body">
         <p>And Google data shows where Minnesotans are going: mostly to parks and other recreation areas to take advantage of Minnesota's summer weather.</p>
+
+        <p>Minnesotans are also going to retail stores about 19% less than normal, but that’s a big jump from late March when it was 58% below normal, according to Google’s tracking data.</p>
       </section>
 
       <div class="slide space">
