--- a/templates/_index-content.svelte.html
+++ b/templates/_index-content.svelte.html
@@ -9,7 +9,7 @@
     <span class="spacer"></span>
     Star Tribune
     <span class="spacer-alt"></span>
-    <time pubdate datetime="2019-11-11T16:00:00">Updated July 2, 2020</time>
+    <time pubdate datetime="2019-11-11T16:00:00">Updated July 7, 2020</time>
   </div>
   <p></p>
   <!-- share -->
@@ -30,7 +30,7 @@
 
         <p>Despite traffic density falling significantly since shelter-in-place orders took effect statewide, Minnesota Department of Transportation daily tracking shows the volume of vehicles now looks more like last year at this time.</p>
 
-        <p>Weekend activity has been lower than usual since coronavirus struck, partially due to big events being canceled.</p>
+        <p>Weekend and holiday activity has been lower than usual since coronavirus struck, partially due to big events being canceled.</p>
       </section>
 
       <div class="slide space">
@@ -42,6 +42,8 @@
       <section class="body">
         <h2 class="chartTitle">Social distancing breaks down</h2>
         <p>On the whole, Minnesotans are back to typical isolation levels <a href="https://www.startribune.com/how-minnesotans-are-lightening-up-on-social-distancing/568966921/">after slacking off for a while</a>. Unacast, a company tracking social distancing with cellphone data, <a href="https://www.unacast.com/covid19/social-distancing-scoreboard?view=state&fips=27" target="new_">shows Minnesota's grade</a> slid from a B in March to and F by June – where much of the United States sits now.</p>
+
+        <p>By July's start, Minnesota had reached a D, which was average for the whole country at the tinme.</p>
       </section>
 
       <div class="slide space">
@@ -77,6 +79,14 @@
             </div>
             <div class="status">
               <h4 class="gradef">F</h4>
+            </div>
+          </li>
+          <li class="li graded complete">
+            <div class="timestamp">
+              <span class="date">July 4<span>
+            </div>
+            <div class="status">
+              <h4 class="graded">D-</h4>
             </div>
           </li>
          </ul>     
