--- a/templates/_index-content.svelte.html
+++ b/templates/_index-content.svelte.html
@@ -9,7 +9,7 @@
     <span class="spacer"></span>
     Star Tribune
     <span class="spacer-alt"></span>
-    <time pubdate datetime="2019-11-11T16:00:00">Updated July 7, 2020</time>
+    <time pubdate datetime="2019-11-11T16:00:00">Updated July 13, 2020</time>
   </div>
   <p></p>
   <!-- share -->
@@ -28,7 +28,7 @@
       <section class="body">
         <h2 class="chartTitle">Vehicular traffic has roared back</h2>
 
-        <p>Despite traffic density falling significantly since shelter-in-place orders took effect statewide, Minnesota Department of Transportation daily tracking shows the volume of vehicles now looks more like last year at this time.</p>
+        <p>Despite traffic density falling significantly since shelter-in-place orders took effect, Minnesota Department of Transportation daily tracking shows the volume of vehicles now looks more like previous years at this time.</p>
 
         <p>Weekend and holiday activity has been lower than usual since coronavirus struck, partially due to big events being canceled.</p>
       </section>
