--- a/templates/_index-content.svelte.html
+++ b/templates/_index-content.svelte.html
@@ -9,7 +9,7 @@
     <span class="spacer"></span>
     Star Tribune
     <span class="spacer-alt"></span>
-    <time pubdate datetime="2019-11-11T16:00:00">Updated July 13, 2020</time>
+    <time pubdate datetime="2019-11-11T16:00:00">Updated July 29, 2020</time>
   </div>
   <p></p>
   <!-- share -->
@@ -43,7 +43,7 @@
         <h2 class="chartTitle">Social distancing breaks down</h2>
         <p>On the whole, Minnesotans are back to typical isolation levels <a href="https://www.startribune.com/how-minnesotans-are-lightening-up-on-social-distancing/568966921/">after slacking off for a while</a>. Unacast, a company tracking social distancing with cellphone data, <a href="https://www.unacast.com/covid19/social-distancing-scoreboard?view=state&fips=27" target="new_">shows Minnesota's grade</a> slid from a B in March to and F by June – where much of the United States sits now.</p>
 
-        <p>By July's start, Minnesota had reached a D, which was average for the whole country at the tinme.</p>
+        <p>By July's start, Minnesota had reached a D, which was average for the whole country at the time.</p>
       </section>
 
       <div class="slide space">
