--- a/styles/index.scss
+++ b/styles/index.scss
@@ -48,6 +48,7 @@ $selector-wrapper: '.strib-styles.ssa.ssb.ssc';
 
 
 .timestamp {
+  text-align: center;
   margin-bottom: 20px;
   padding: 0px 20px;
   display: flex;
