--- a/templates/_index-content.svelte.html
+++ b/templates/_index-content.svelte.html
@@ -43,7 +43,7 @@
         <h2 class="chartTitle">Social distancing breaks down</h2>
         <p>On the whole, Minnesotans are back to typical isolation levels <a href="https://www.startribune.com/how-minnesotans-are-lightening-up-on-social-distancing/568966921/">after slacking off for a while</a>. Unacast, a company tracking social distancing with cellphone data, <a href="https://www.unacast.com/covid19/social-distancing-scoreboard?view=state&fips=27" target="new_">shows Minnesota's grade</a> slid from a B in March to and F by June – where much of the United States sits now.</p>
 
-        <p>By July's start, Minnesota had reached a D, which was average for the whole country at the time.</p>
+        <p>By July's start, Minnesota had reached a D, which was average for the whole country at the time. It's since fallen to an F.</p>
       </section>
 
       <div class="slide space">
@@ -73,7 +73,7 @@
               <h4 class="graded">D</h4>
             </div>
           </li>
-          <li class="li graded complete">
+          <li class="li gradef complete">
             <div class="timestamp">
               <span class="date">June 20<span>
             </div>
@@ -87,6 +87,14 @@
             </div>
             <div class="status">
               <h4 class="graded">D-</h4>
+            </div>
+          </li>
+          <li class="li gradef complete">
+            <div class="timestamp">
+              <span class="date">July 29<span>
+            </div>
+            <div class="status">
+              <h4 class="gradef">F</h4>
             </div>
           </li>
          </ul>     
