--- a/templates/_index-content.svelte.html
+++ b/templates/_index-content.svelte.html
@@ -133,7 +133,7 @@
 
         <p>Mandatory safety precautions and service reductions continue for Metro Transit across the Twin Cities area. That, combined with continued work-from-home arrangements, have depressed ridership on buses and light rail.</p>
 
-        <p>Ridership ceased completely as Metro Transit shut down over the period of unrest and mandatory curfews enforced shortly after the death of George Floyd, but has since bounced back to prior levels.</p>
+        <p>Ridership ceased completely as Metro Transit shut down over the period of unrest and curfews enforced shortly after the death of George Floyd, but has since bounced back to prior levels.</p>
       </section>
 
       <div class="slide space">
