--- a/templates/_index-content.svelte.html
+++ b/templates/_index-content.svelte.html
@@ -9,7 +9,7 @@
     <span class="spacer"></span>
     Star Tribune
     <span class="spacer-alt"></span>
-    <time pubdate datetime="2019-11-11T16:00:00">Updated August 17, 2020</time>
+    <time pubdate datetime="2019-11-11T16:00:00">Updated August 18, 2020</time>
   </div>
   <p></p>
   <!-- share -->
@@ -118,7 +118,7 @@
         <h2 class="chartTitle">Restaurant diners are returning, slowly</h2>
         <p>Bars and restaurants may be missing typical crowds for a while, even with the reopening of indoor and outdoor dining.</p>
 
-        <p>But even with restrictions placed on restaurants in terms of distancing and reservations, <a href="https://www.opentable.com/state-of-industry">numbers from OpenTable</a> show patrons are piling back into sit-down eating establishments after months of most places being either closed or confined to takeout and delivery.</p>
+        <p>But even with restrictions placed on restaurants in terms of distancing and reservations, <a href="https://www.opentable.com/state-of-industry" target="new_">numbers from OpenTable</a> show patrons are piling back into sit-down eating establishments after months of most places being either closed or confined to takeout and delivery.</p>
 
         <p>This return slowed down a bit the past week, particularly in Minneapolis compared to statewide and national trends.</p>
       </section>
